{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 12,
  "lineage": "89dd26b9-ae20-178e-45ff-ef73d8c05549",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01545550-u-vm1-nic",
            "internal_domain_name_suffix": "3xsa3b1s54tuncfzmmmgek4odd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01545550-u-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01545550-u-vm1-pip",
                "subnet_id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01545550-u-vm1-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.first-rg",
            "azurerm_subnet.first-rg-net-subnet1",
            "azurerm_virtual_network.first-rg-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security-group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01545550-u-vm1-n01545552",
            "fqdn": "n01545550-u-vm1-n01545552.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01545550-u-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01545550-u-vm1-pip",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "first-rg-net-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.first-rg",
            "azurerm_virtual_network.first-rg-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "first-rg-net-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.first-rg",
            "azurerm_virtual_network.first-rg-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet1-nsg1-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.security-group1",
            "azurerm_resource_group.first-rg",
            "azurerm_subnet.first-rg-net-subnet1",
            "azurerm_virtual_network.first-rg-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet2-nsg2-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.security-group2",
            "azurerm_resource_group.first-rg",
            "azurerm_subnet.first-rg-net-subnet2",
            "azurerm_virtual_network.first-rg-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "first-rg-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "870ee4ed-ff72-46a7-88b9-6318622bce1b",
            "id": "/subscriptions/03fe48c1-a8fb-49f5-affe-98dd12013d92/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    }
  ]
}